<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_starter"
    tools:context=".activities.StarterActivity">

    <!-- Capa de oscurecimiento -->
    <View
        android:id="@+id/darkOverlay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#556B6A6A"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <ImageView
        android:id="@+id/imageIcon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_tapa" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:background="@drawable/rounded_liniarlayout_starteractivity"
        app:layout_constraintTop_toBottomOf="@+id/imageIcon">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:shadowColor="#7d570e"
            android:shadowDx="7"
            android:shadowDy="7"
            android:shadowRadius="5"
            android:text="@string/textViewRol"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="44sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnWorker"
            android:layout_width="190dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_btn"
            android:fontFamily="sans-serif-black"
            android:shadowColor="#2A2323"
            android:shadowDx="7"
            android:shadowDy="7"
            android:shadowRadius="5"
            android:text="@string/btnWorker"
            android:textColor="@color/white"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnClient" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnClient"
            android:layout_width="190dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_btn"
            android:fontFamily="sans-serif-black"
            android:shadowColor="#2A2323"
            android:shadowDx="7"
            android:shadowDy="7"
            android:shadowRadius="5"
            android:text="@string/btnClient"
            android:textColor="@color/white"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="32dp"
            app:layout_constraintTop_toBottomOf="@+id/btnWorker"
            tools:layout_editor_absoluteX="0dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/spaBtn"
                style="@android:style/Widget.Button"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_marginVertical="32dp"
                android:background="@drawable/espana"
                android:text=""
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/engbtn"
                style="@android:style/Widget.Button"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="32dp"
                android:background="@drawable/ingles"
                android:text=""
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/catBtn"
                style="@android:style/Widget.Button"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_marginVertical="32dp"
                android:background="@drawable/bandera_catalan"
                android:text=""
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
